<resources>

    <string name="app_name">Catamountain Quest</string>
    <string name="action_settings">Settings</string>
    <string name="Load">Load</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="Save">Save</string>
    <string name="Back">Back</string>
    <string name="selectVolume">Please Select A Volume</string>
    <string name="title_activity_qrscan">QRscan</string>
    <string name="title_activity_qr_scan">qrScan</string>
    <string name="Activity1">Activity 1</string>
    <string name="Achievements">Achievements</string>
    <string name="userachievements"> Earned Trophies </string>
    <string name="minigamedesc">"Find and take a picture of the flowers.</string>
    <string name="description">Here will be a brief description of the achievement</string>
    <string name="achDes">You have found the correct flower Congratulations!</string>
    <string name="achFlTitle">Flower Achievement</string>
    <string name="ach1Des">You have found traveled exactly 1 mile Congratulations!</string>
    <string name="ach1MileTitle">1 Mile Achievement</string>
    <string name="ach5Des">You have traveled exactly 5 miles Congratulations!</string>
    <string name="ach5MileTitle">5 Mile Achievement</string>
    <string name="ach1hrDes">You have been on the trail 1 hour Congratulations!</string>
    <string name="ach1hrTitle">1 Hour Achievement</string>
    <string name="minigames">Mini Game</string>
    <string name="savebutton">Save</string>
    <string name="loadbutton">Load</string>
    <string name="MenuBar">Menu Bar</string>
    <string name="Story">Story</string>
    <string name="Settings">Settings</string>
    <string name="corkscrew">Corkscrew</string>
    <string name="ggloop">Gribble Gap Loop</string>
    <string name="HHSconnector">HHS Connector</string>
    <string name="catamounttrail">Catamount Trail</string>
    <string name="Unknown">_???</string>
    <string name="darkmode">Dark Mode</string>
    <string name="automode">Auto Light</string>
    <string name="EventAvailable">Event Available</string>
    <string name="step_counter">android.hardware.sensor.stepcounter</string>
    <string name="step_detector">android.hardware.sensor.stepdetector</string>
    <string name="question1">Which of the following is not a trail on the WCU Trail System?</string>


    <string-array name="values_array">


    </string-array>
    <string name="title_activity_screen_to_map">ScreenToMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_question_event">QuestionEvent</string>

</resources>