<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/regularbuttons">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:gravity="center_vertical"
        android:text="Question"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/alvarocondensed">
    </TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_weight="3">
        <TextView
            android:id="@+id/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question1"
            android:textColor="@color/black"
            android:textSize="40sp"/>

       <RadioGroup
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/answerGroup"
           android:layout_gravity="center">
           <RadioButton
               android:id="@+id/answer0"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="30sp"
               android:text="@string/catamounttrail" />
           <RadioButton
               android:id="@+id/answer1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="30sp"
               android:text="@string/corkscrew" />
           <RadioButton
               android:id="@+id/answer2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="30sp"
               android:text="@string/HHSconnector" />
           <RadioButton
               android:id="@+id/answer3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="30sp"
               android:text="@string/ggloop" />

       </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Submit"
        android:textSize="30dp"
        android:id="@+id/submitbutton"
        android:background="@color/mixedpurple"/>


 </LinearLayout>