<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gold"
    android:weightSum="20"
    tools:context="screens.Settings">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings"
            android:fontFamily="@font/alvarocondensed"
            android:textColor="@color/black"
            android:textSize="65sp">
        </TextView>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="9">
        <CheckBox
            android:id="@+id/soundcheck"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alvarocondensed"
            android:text="@string/sound"
            android:textSize="45sp"/>

        <CheckBox
            android:id="@+id/darkcheck"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alvarocondensed"
            android:text="@string/darkmode"
            android:textSize="45sp"/>

    </LinearLayout>


<!--
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/selectVolume"
            android:textColor="@color/black"
            android:fontFamily="@font/alvarocondensed"
            android:textSize="45sp">

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:max="100"
            android:progress="20"
            />
    </LinearLayout>-->






<!--
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2.5">
            <Button
                android:id="@+id/loadb"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:textColor="@color/black"
                android:background="@drawable/roundbutton"
                android:fontFamily="@font/alvarocondensed"
                android:layout_marginRight="10dp"
                android:onClick="onClick"
                style="@style/buttons"

                android:text="@string/Load"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2.5">
            <Button
                android:id="@+id/saveb"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:onClick="onClick"
                style="@style/buttonssquare"
                android:background="@drawable/roundbutton"
                android:fontFamily="@font/alvarocondensed"
                android:textColor="@color/black"
                android:text="@string/Save"/>

        </LinearLayout>-->

    </LinearLayout>

